--- a/indext.html
+++ b/indext.html
@@ -5,37 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="shortcut icon" href=&#xF678; type="image/x-icon">
     <link rel="stylesheet" href="./design/font.css">
     <link rel="stylesheet" href="./design/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <div class="container">
-    <form class="logIn">
-            <ul class="title">
-                <li class="titleItem"><a href="#" class="sign signIn">SIGN IN</a></li>
-                <li class="titleItem"><a href="#" class="sign signUp">SIGN UP</a></li>
-            </ul>
+<div class="container">
+<form class="logIn">
+<ul class="title">
+    <li class="titleItem"><a href="#" class="sign signIn">SIGN IN</a></li>
+    <li class="titleItem"><a href="#" class="sign signUp">SIGN UP</a></li>
+</ul>
 
-            <div class="fillupPart">
-                <label for="username" class="userInformation">USERNAME</label>
-                <input type="text" name="username" id="username" class="userInput">
-                <label for="password" class="userInformation">Email Adress</label>
-                <input type="text" name="password"  class="userInput">
-            </div>
+<div class="fillupPart">
+    <label for="username" class="userInformation">USERNAME</label>
+    <input type="text" name="username" id="userName" class="userInput" maxlength="12">
+    <label for="password" class="userInformation">PassWord</label>
+    <input type="text" name="password" id="userPassword" class="userInput" maxlength="8">
+</div>
 <div class="textCheck">
     <input type="checkbox" name="check" id="checkBtn">
     <label for="checkBtn" class="checkText">Keep me Signed in!</label>
     
 </div>
 <div class="signinButton">
-    <button type="submit" class="btnSubmit">SIGN IN</button>
+    <button type="submit" class="btnSubmit" onClick="clickBtn()" onSubmit="submit()">SIGN IN</button>
 </div><hr>
 <div class="forgotText">
     <a href="#" class="textForgot">Forgot Password?</a>
 </div>
+<div class="modalText">Please Copmlete this part!</div>
 </form>
     </div>
+    <script src="./design/javaScript.js"></script>
 </body>
 </html>
